--- a/index.html
+++ b/index.html
@@ -7,8 +7,16 @@
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
+    <!-- 12/1 -->
     <button id="setLink" class="first-btn-link">Enter silannya</button>
     <button id="goToLink" class="two-btn-link">Go for the opportunity</button>
+
+    <!-- 12/2 -->
+    <div id="buttonContainer">
+      <button id="btn_mystery" class="btn">btn-1</button>
+      <button id="btn_mystery" class="btn">btn-2</button>
+      <button id="btn_mystery" class="btn">btn-3</button>
+    </div>
     <script src="js/script.js"></script>
   </body>
 </html>
