--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
       <button id="btn_mystery" class="btn">btn-2</button>
       <button id="btn_mystery" class="btn">btn-3</button>
     </div>
+
+    <!-- 12/3 -->
+    <ul id="taskList">
+      <li class="lis-text">text 1<button class="deleteBtn">Delete</button></li>
+      <li class="lis-text">text 2<button class="deleteBtn">Delete</button></li>
+      <li class="lis-text">text 3<button class="deleteBtn">Delete</button></li>
+    </ul>
+    <input type="text" id="taskInput" />
+    <button id="addBtn" class="addButton">add</button>
     <script src="js/script.js"></script>
   </body>
 </html>
